--- a/style.css
+++ b/style.css
@@ -43,6 +43,11 @@ input {
   font-size: 16px;
 }
 
+
+.flag-button-container button {
+  box-shadow: -1px 0px 0px  canvas;
+}
+
 fieldset:has(input[type="checkbox"]) {
   position: relative;
   height: 2rem;
